--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "cd server && tsc && node dist/app.js"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "express-openid-connect": "^2.14.0",
     "next": "13.3.0",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@auth0/nextjs-auth0": "^2.4.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "express": "^4.18.2"
   }
 }
