--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express-openid-connect": "^2.14.0",
@@ -28,6 +29,8 @@
     "@auth0/nextjs-auth0": "^2.4.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
   }
 }
