--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express-openid-connect": "^2.14.0",
+    "framer-motion": "^10.12.12",
     "next": "13.3.0",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.21",
