--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
@@ -32,6 +33,7 @@
     "@types/node": "^18.15.11",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "5.5",
     "sqlite3": "^5.1.6"
   }
 }
