--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "server": "cd server && tsc && node dist/app.js"
   },
   "dependencies": {
-    "@types/react": "18.0.35",
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.1",
+    "@editorjs/warning": "^1.3.0",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "editorjs-html": "^3.4.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express-openid-connect": "^2.14.0",
@@ -23,17 +36,22 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-textarea-autosize": "^8.4.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
+    "@editorjs/quote": "^2.5.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/react": "^18.2.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "5.5",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "zod": "^3.21.4"
   }
 }
