--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-textarea-autosize": "^8.4.1",
+    "react-use": "^17.4.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
