--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "editorjs-html": "^3.4.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express-openid-connect": "^2.14.0",
     "framer-motion": "^10.12.12",
+    "lucide-react": "^0.236.0",
     "next": "13.3.0",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.21",
@@ -39,7 +42,9 @@
     "react-hook-form": "^7.44.3",
     "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
+    "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
