change data base

--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "codex-notifier": "^1.1.2",
     "editorjs-html": "^3.4.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "express-openid-connect": "^2.14.0",
     "framer-motion": "^10.12.12",
     "lucide-react": "^0.236.0",
+    "mysql2": "^3.4.0",
     "next": "13.3.0",
     "next-pwa": "^5.6.0",
+    "pg": "^8.11.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
