--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "cd server && tsc && node dist/app.js"
+    "server": "cd server && ts-node src/app.ts"
   },
   "dependencies": {
     "@editorjs/checklist": "^1.5.0",
@@ -24,6 +24,7 @@
     "@editorjs/table": "^2.2.1",
     "@editorjs/warning": "^1.3.0",
     "@types/react-dom": "18.0.11",
+    "@uidotdev/usehooks": "^2.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
@@ -45,6 +46,7 @@
     "react-hook-form": "^7.44.3",
     "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
+    "swr": "^2.2.0",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
