--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-hook-form": "^7.44.3",
     "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
+    "save-dev": "^0.0.1-security",
+    "sequelize-typescript": "^2.1.5",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.1",
@@ -62,6 +64,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "5.5",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6",
     "zod": "^3.21.4"
   }
