--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+    "rules": {
+    "import/order": [
+      "warn",
+      {
+        "newlines-between": "never",
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index", "object"],
+      }
+    ]
+    }
 }
