--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notion",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,7 +26,6 @@
     "@uidotdev/usehooks": "^2.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "codex-notifier": "^1.1.2",
@@ -38,7 +37,6 @@
     "jsonwebtoken": "^9.0.1",
     "loadash": "^1.0.0",
     "lucide-react": "^0.236.0",
-    "mysql2": "^3.4.0",
     "next": "13.3.0",
     "next-pwa": "^5.6.0",
     "pg": "^8.11.0",
@@ -49,7 +47,6 @@
     "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
     "save-dev": "^0.0.1-security",
-    "sequelize-typescript": "^2.1.5",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.1",
@@ -58,21 +55,12 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@auth0/nextjs-auth0": "^2.4.0",
     "@editorjs/checklist": "^1.5.0",
     "@editorjs/quote": "^2.5.0",
     "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.2.8",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "prettier": "^3.0.0",
-    "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.1",
-    "sqlite3": "^5.1.6",
     "zod": "^3.21.4"
   }
 }
